# Fors2pcigale

./: .copier-answers.yml  .pre-commit-config.yaml  8.0.0  LICENSE  README.md  pyproject.toml
.github/workflows/: testing-and-coverage.yml
benchmarks/: asv.conf.json
docs/: conf.py  index.rst  notebooks.rst  requirements.txt
docs/notebooks/: intro_notebook.ipynb
docs/notebooks/example_gism2_2023/: README.adoc
docs/notebooks/example_gism2_2023/exercise/: KINGFISH_MoustakasEtAll_lines.fits  Sings_KINGFISH_sample.txt  Sings_KINGFISH_sample_with_lines.fits  pcigale.ini
docs/notebooks/example_gism2_2023/notebooks/: DumpFitsfilewithlines.ipynb  introduction.ipynb  manual_fitting.ipynb
docs/notebooks/example_gism_2021/: README.adoc  cigale_introduction.ipynb  cigale_manual_fitting.ipynb
docs/notebooks/example_gism_2021/exercise/: Sings_KINGFISH_sample.txt  pcigale.ini
docs/notebooks/fors2_emission_lines/: AccessFors2Spectra.ipynb  AccessFors2Spectra_andcalibrate.ipynb  AccessFors2Spectra_calculatebackground.ipynb  AccessFors2Spectra_calculatephotoncount.ipynb  AccessFors2Spectra_comparewithimage.ipynb  AccessFors2Spectra_withfilters.ipynb  Factor_Magnitude.ipynb  README.md
docs/notebooks/fors2starlightio/: generate_fluxtable.ipynb  test_fors2starlightio.ipynb
docs/notebooks/pcigale_runs/pcig_run_2024-02-05/: DumpPcigaleFits.ipynb  Fors2Photom_cigaleinput_NONan.fits  Fors2Photom_cigaleinput_NONan.txt  README.md  ViewFittedPcigaleSSP.ipynb  cigale_adjust_fitresults.ipynb  cigale_manual_fitting.ipynb  cigale_save_fitresults-loop.ipynb  cigale_view_fitresults-loop.ipynb  cigale_view_fitresults.ipynb  pcigale.ini  pcigale.ini.backup  pcigale.ini.original
docs/notebooks/pcigale_runs/pcig_run_2024-02-06/: Fors2Photom_cigaleinput_WithNan.fits  pcigale.ini  pcigale.ini.spec
src/fors2pcigale/fors2starlightio/: __init__.py  fors2starlightio.py
src/fors2pcigale/utils/: __init__.py  utils_stat.py
src/gelato/Convenience/: concatResults.py  ewResults.py  paramsToTeX.py  plotResults.py  runGELATO.py
src/gelato/Example/: DumpRunProcessingStatus.ipynb  Example.ipynb  ExampleFitInNb.ipynb  ExampleFitInNb.py  ExampleFitInNb_ReviewBads_loop.ipynb  ExampleFitInNb_ReviewGoods_loop.ipynb  ExampleFitInNb_Review_loop.ipynb  ExampleFitInNb_loop.ipynb  ExampleFitInNb_recoverfitfailure.ipynb  ExampleFitInNb_simple.ipynb  ExampleParametersFitInNb.json  ExampleParametersFitInNb_v2.json  ExampleParametersFitInNb_v3.json  ProcessMultiSpectra.ipynb  ProcessMultiSpectraInitial.ipynb  README.md  SSPFromGelato.ipynb  ViewFitResultMultipleSpectra.ipynb  ViewFitResultOneSpectrum.ipynb  libExampleFitInNb.py  object_filelist_v0.csv  object_filelist_v0.fits  object_filelist_v1.csv  object_filelist_v1.fits  object_filelist_v2.csv  object_filelist_v2.fits  object_filelist_v3.csv  object_filelist_v3.fits  spec_forgelato  wavelengthCorrection-air-vaccuum.ipynb
src/gelato/Example/Results_v0/: GELATO-results.fits  specgelato_SPEC102-results.fits  specgelato_SPEC106-results.fits  specgelato_SPEC107-results.fits  specgelato_SPEC109-results.fits  specgelato_SPEC110-results.fits  specgelato_SPEC111-results.fits  specgelato_SPEC112-results.fits  specgelato_SPEC113-results.fits  specgelato_SPEC114-results.fits  (+539 more)
tests/fors2pcigale/: test_example_module.py
tests/fors2pcigale/filters/: __init__.py  test_filters.py
tests/fors2pcigale/fors2starlightio/: __init__.py  test_fors2starlightio.py
tests/fors2pcigale/utils/: test_utils_stat.py
(+2475 files in other folders)
