[project]
name = "fors2pcigale"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    { name = "Sylvie Dagoret-Campagne", email = "sylvie.dagoret-campagne@ijclab.in2p3.fr" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["version"]
dependencies = [
    "ipykernel", # Support for Jupyter notebooks
]

[project.urls]
"Source Code" = "https://github.com/sylvielsstfr/fors2pcigale"

# On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov", # Used to report total code coverage
    "pre-commit", # Used to run checks before finalizing a git commit
    "sphinx", # Used to automatically generate documentation
    "sphinx-rtd-theme", # Used to render documentation
    "sphinx-autoapi", # Used to automatically generate api documentation
    "pylint", # Used for static linting of files
    # if you add dependencies here while experimenting in a notebook and you
    # want that notebook to render in your documentation, please add the
    # dependencies to ./docs/requirements.txt as well.
    "nbconvert", # Needed for pre-commit check to clear output from Python notebooks
    "nbsphinx", # Used to integrate Python notebooks into Sphinx documentation
    "ipython", # Also used in building notebooks into Sphinx
    "asv==0.6.1", # Used to compute performance benchmarks
    "numpy", # required by pcigale
    "astropy", # required by pcigale
    "matplotlib", # required by pcigale
    "seaborn",
    "scipy", # required by pcigale
    "configobj", # required by pcigale
    "rich", # required by pcigale
    "ipympl", # required by notebooks
    "tables", # required for io and format converter
    "h5py",  # required for io and format converter 
    "pandas", # required for io and format converter 
    "scikit-learn", # required for io and format converter 
    "jupyter",
    "openpyxl",
    "jax", # key package used for autodifferentiation and vectorisation
    "jaxlib", # key package used for optimisations
    "jaxopt", # key package used for optimisations
]

[build-system]
requires = [
    "setuptools>=62", # Used to build and package the Python project
    "setuptools_scm>=6.2", # Gets release version from git. Makes it available programmatically
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/fors2pcigale/_version.py"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.black]
line-length = 110
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 110

[tool.coverage.run]
omit=["src/fors2pcigale/_version.py"]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["fors2pcigale",
"for2pcigale.fors2starlightio",

]  
# package names should match these glob patterns (["*"] by default)
exclude = ["fors2pcigale.tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = true  # to activate scanning PEP 420 namespaces (true by default)


[tool.setuptools.package-data]
fors2pcigale = ["*.txt"]
"fors2pcigale.data" = ["*.h5","*.pickle"]

